@@ -1012,6 +1012,9 @@ void TMainWindow::Fx()
 
     if (dialog->exec() == QDialog::Accepted)
     {
+        // Fix the bug #492. https://bitbucket.org/dismine/valentina/issues/492/valentina-crashes-when-add-an-increment
+        // Because of the bug need to take QTableWidgetItem twice time. Previous update "killed" the pointer.
+        const QTableWidgetItem *nameField = ui->tableWidget->item(row, ColumnName);
         m->SetMValue(nameField->data(Qt::UserRole).toString(), dialog->GetFormula());
 
         MeasurementsWasSaved(false);
