@@ -681,6 +681,9 @@ void DialogIncrements::Fx()
 
     if (dialog->exec() == QDialog::Accepted)
     {
+        // Fix the bug #492. https://bitbucket.org/dismine/valentina/issues/492/valentina-crashes-when-add-an-increment
+        // Because of the bug need to take QTableWidgetItem twice time. Previous update "killed" the pointer.
+        const QTableWidgetItem *nameField = ui->tableWidgetIncrement->item(row, 0);
         doc->SetIncrementFormula(nameField->text(), dialog->GetFormula());
         FullUpdateTree(Document::LiteParse);
         ui->tableWidgetIncrement->selectRow(row);
